# sbc_ivas

./: README.md
ivas/: README.md  build-ivas-essential.sh
ivas/ivas-accel-sw-libs/: README.md
ivas/ivas-accel-sw-libs/ivas_xdpuinfer/: meson.build
ivas/ivas-gst-plugins/: meson_options.txt
ivas/ivas-gst-plugins/gst-libs/gst/ivas/: gstinferenceprediction.c  meson.build
ivas/ivas-gst-plugins/gst/metaaffixer/: gstivas_xmetaaffixer.c  meson.build
ivas/ivas-gst-plugins/sys/: meson.build
ivas/ivas-gst-plugins/sys/abrscaler/: gstivas_xabrscaler.c  gstivas_xabrscaler.c.orig  gstivas_xabrscaler.h  meson.build  multi_scaler_hw.h
ivas/ivas-gst-plugins/sys/filter/: gstivas_xfilter.c  meson.build
ivas/ivas-gst-plugins/sys/multisrc/: gstivas_xmultisrc.cpp  meson.build
ivas_tutorial/examples/: .1ch_4k_facedetect.sh.un~  .1k.sh.un~  .4k.sh.un~  .6ch.sh.un~  .6ch_1080p_mix.sh.un~  .8ch_1080p_facedetect.sh.un~  .display.sh.un~  .displytest.sh.un~  .enc.sh.un~  .roi_rtsp_server.sh.un~  .roi_test.sh.un~  .ssd_6.sh.un~  .test.sh.swn  .test.sh.swo  .test.sh.swp  .test2.sh.un~  2ch_4k_facedetect.sh  4kdisplytest.sh  8ch_1080p_facedetect.sh  8ch_1080p_mix.sh  dp_resolution.sh  roi_decode_test.sh  roi_encode_test.sh  roi_rtsp_server.sh  roi_rtsp_server.sh~  rtsp_ipcamera_facedetect.sh
ivas_tutorial/examples/json/: .kernel_ML_ssd.json.un~  .test.sh.swp  kernel_ML_facedetect.json  kernel_ML_ssd.json  kernel_swbbox_facedetect.json  kernel_swbbox_ssd.json  kernel_xpp_pipeline.json
ivas_tutorial/examples/resnet50_mt_py/: readme
ivas_tutorial/models/x4/ssd_traffic/: label.json
(+25 files in other folders)
